package designPatterns.scalerQuestions.builderDesignPattern.question1;

public enum MessageType {
    TEXT,
    IMAGE,
    AUDIO,
    VIDEO
}