@startuml

title __QUESTION1's Class Diagram__\n

  namespace  {
    namespace esignPatterns.scalerQuestions.builderDesignPattern.question1 {
      class designPatterns.scalerQuestions.builderDesignPattern.question1.MessageBuilder {
          - content : String
          - isDelivered : boolean
          - recipient : String
          - sender : String
          - timestamp : long
          + MessageBuilder()
          {static} + getBuilder()
      }
    }
  }
  

  namespace  {
    namespace esignPatterns.scalerQuestions.builderDesignPattern.question1 {
      class designPatterns.scalerQuestions.builderDesignPattern.question1.MessageBuilder.Builder {
          - content : String
          - isDelivered : boolean
          - recipient : String
          - sender : String
          - timestamp : long
          + Builder()
          + build()
          + setContent()
          + setDelivered()
          + setMessageType()
          + setRecipient()
          + setSender()
          + setTimestamp()
      }
    }
  }
  

  namespace  {
    namespace esignPatterns.scalerQuestions.builderDesignPattern.question1 {
      enum MessageType {
        AUDIO
        IMAGE
        TEXT
        VIDEO
      }
    }
  }
  

  designPatterns.scalerQuestions.builderDesignPattern.question1.MessageBuilder o-- designPatterns.scalerQuestions.builderDesignPattern.question1.MessageType : messageType
  designPatterns.scalerQuestions.builderDesignPattern.question1.MessageBuilder +-down- designPatterns.scalerQuestions.builderDesignPattern.question1.MessageBuilder.Builder
  designPatterns.scalerQuestions.builderDesignPattern.question1.MessageBuilder.Builder o-- designPatterns.scalerQuestions.builderDesignPattern.question1.MessageType : messageType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
